<resources>
    <string name="app_name">VoPet</string>
    <string name="settings">설정</string>
    <string name="word_list_star">즐겨찾기</string>
    <string name="word_list_options_title">단어장 옵션</string>
    <string name="word_list_option_select">단어장 선택</string>
    <string name="word_list_option_edit">단어장 수정</string>
    <string name="word_list_option_pin">단어장 고정</string>
    <string name="word_list_option_delete">단어장 삭제</string>
    <string name="word_list_option_unpin">단어장 고정 해제</string>
    <string name="word_list_pin_success">%1$s 단어장을 고정했습니다.</string>
    <string name="word_list_unpin_success">%1$s 단어장 고정을 해제했습니다.</string>
    <string name="close">닫기</string>
    <string name="word_list_selected">선택된 단어장</string>
    <string name="word_list_cloud">클라우드 단어장</string>
    <string name="word_list_edit_title">단어장 수정</string>
    <string name="word_list_edit_success">단어장이 수정되었습니다.</string>
</resources>